fix image block field to wrap the entire image across various alignments

--- a/packages/volto/theme/themes/pastanaga/extras/blocks.less
+++ b/packages/volto/theme/themes/pastanaga/extras/blocks.less
@@ -140,6 +140,7 @@
 }
 
 .block.align.left {
+  display: flex;
   z-index: 2;
 
   &.video .video-inner,
@@ -174,6 +175,8 @@
 }
 
 .block.align.right {
+  display: flex;
+  flex-direction: row-reverse;
   z-index: 2;
 
   &.maps iframe,
